--- a/PAGES/servicios.html
+++ b/PAGES/servicios.html
@@ -58,6 +58,64 @@
 
   <!-- NAV BAR FINAL------------------------------------------------------------------------------------------------------------------------->
 
+  <!-- BANNER STAR -->
+  <!-- <section id="scrollspy-banner" class="bg-secondary text-light p-5 p-lg-0 pt-lg-5 text-center text-sm-start">
+    <div class="container">
+      <div class="d-sm-flex align-items-center justify-content-between">
+        <img class="img-fluid w-50 d-none d-sm-block px-4 " src="../IMG/PROJECT 1/4.svg" alt="">
+        <div>
+          <h1>Sneak peak, <span class="text-info">BOOTSTRAP!</span> </h1>
+          <p class="lead my-4 ">Lorem ipsum dolor sit amet consectetur adipisicing elit. Eveniet minima
+            tempora expedita? Ullam
+            sed totam voluptates ea adipisci distinctio laborum?</p>
+          <button class="btn btn-info btn-lg" type="button" data-bs-toggle="modal" data-bs-target="#modal">Start
+            learning
+            today</button>
+        </div>
+      </div>
+    </div>
+  </section> -->
+  <!-- BANNER END -->
+
+
+  <!-- MODAL SECTION START -->
+  <div class="modal fade" id="modal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+    <div class="modal-dialog">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h5 class="modal-title" id="exampleModalLabel">Cuentanos de tu idea. ¡Queremos escucharte!</h5>
+          <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+        </div>
+        <div class="modal-body">
+          <!-- <p class="lead">¡Pongámonos en contacto!</p> -->
+          <div class="form-floating mb-3">
+            <input type="name" class="form-control" id="floating-name" placeholder="full-name">
+            <label for="floating-name">Nombre Completo</label>
+          </div>
+          <div class="form-floating mb-3">
+            <input type="email" class="form-control" id="floating-email" placeholder="email">
+            <label for="floating-email">Correo Electronico</label>
+          </div>
+          <div class="form-floating mb-3">
+            <input type="phone-number" class="form-control" id="floating-email" placeholder="phone-number">
+            <label for="floating-phone-number">Numero Telefonico</label>
+          </div>
+          <div class="form-floating">
+            <textarea class="form-control" placeholder="Leave a comment here" id="floatingTextarea2"
+              style="height: 100px"></textarea>
+            <label for="floatingTextarea2">Cuentanos sobre tu idea o negocio</label>
+          </div>
+        </div>
+        <div class="modal-footer">
+          <button type="button" class="btn botoncito1" data-bs-dismiss="modal">Salir</button>
+          <button type="button" class="btn botoncito2">Enviar</button>
+        </div>
+      </div>
+    </div>
+  </div>
+  <!-- MODAL SECTION END -->
+
+
   <div class="banner-servicios p-5 pb-0">
     <div class="container">
       <div class="row align-items-center justify-content-between">
@@ -68,7 +126,7 @@
         </div>
 
 
-        <div class="col-md text-center p-5 order-2 order-md-1">
+        <div class="col-md text-center order-2 order-md-1">
           <h1 class="titulo">¿Tienes un proyecto <span>proyecto</span> en mente?</h1>
           <p class="lead my-4 ">Si alguna vez quieres tomar un café/bubble tea (virtualmente) o simplemente quieres una
             charla rápida, ¡puedes encontrarme en las redes sociales o puedes enviarme un mensaje aquí!</p>
@@ -80,7 +138,7 @@
   </div>
 
   <!-- MODAL BANNER START -->
-  <div class="modal fade" id="modal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+  <!-- <div class="modal fade" id="modal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
     <div class="modal-dialog">
       <div class="modal-content">
         <div class="modal-header">
@@ -113,7 +171,7 @@
         </div>
       </div>
     </div>
-  </div>
+  </div> -->
   <!-- MODAL BANNER END -->
 
   <!--SERVICIOS CARDS------------------------------------------------------------------------------------------------------------------------->
@@ -170,157 +228,6 @@
 
   <!--MODAL PARA LOS SERVICIOS------------------------------------------------------------------------------------------------------------------------->
 
-  <!-- MODAL SECTION START -->
-  <!-- UX/UI -->
-  <div class="modal fade" id="modal-uxui" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
-    <div class="modal-dialog">
-      <div class="modal-content">
-        <div class="modal-header">
-          <h5 class="modal-title" id="exampleModalLabel">¡Cuentanos de tu idea! ¡Queremos escucharte!</h5>
-          <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-        </div>
-        <div class="modal-body">
-          <p class="lead">¡Pongámonos en contacto!</p>
-          <!-- FORM START -->
-          <div class="form-floating mb-3">
-            <input type="name" class="form-control" id="floating-name" placeholder="full-name">
-            <label for="floating-name">Nombre Completo</label>
-          </div>
-          <div class="form-floating mb-3">
-            <input type="email" class="form-control" id="floating-email" placeholder="email">
-            <label for="floating-email">Correo Electronico</label>
-          </div>
-          <div class="form-floating mb-3">
-            <input type="phone-number" class="form-control" id="floating-email" placeholder="phone-number">
-            <label for="floating-phone-number">Numero Telefonico</label>
-          </div>
-          <div class="form-floating">
-            <textarea class="form-control" placeholder="Leave a comment here" id="floatingTextarea2"
-              style="height: 100px"></textarea>
-            <label for="floatingTextarea2">Cuentanos sobre tu idea o negocio</label>
-          </div>
-          <!-- FORM END -->
-        </div>
-        <div class="modal-footer">
-          <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Salir</button>
-          <button type="button" class="btn btn-info">Enviar</button>
-        </div>
-      </div>
-    </div>
-  </div>
-  <!-- FRONTEND -->
-  <div class="modal fade" id="modal-frontend" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
-    <div class="modal-dialog">
-      <div class="modal-content">
-        <div class="modal-header">
-          <h5 class="modal-title" id="exampleModalLabel">¡Cuentanos de tu idea! ¡Queremos escucharte!</h5>
-          <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-        </div>
-        <div class="modal-body">
-          <p class="lead">¡Pongámonos en contacto!</p>
-          <!-- FORM START -->
-          <div class="form-floating mb-3">
-            <input type="name" class="form-control" id="floating-name" placeholder="full-name">
-            <label for="floating-name">Nombre Completo</label>
-          </div>
-          <div class="form-floating mb-3">
-            <input type="email" class="form-control" id="floating-email" placeholder="email">
-            <label for="floating-email">Correo Electronico</label>
-          </div>
-          <div class="form-floating mb-3">
-            <input type="phone-number" class="form-control" id="floating-email" placeholder="phone-number">
-            <label for="floating-phone-number">Numero Telefonico</label>
-          </div>
-          <div class="form-floating">
-            <textarea class="form-control" placeholder="Leave a comment here" id="floatingTextarea2"
-              style="height: 100px"></textarea>
-            <label for="floatingTextarea2">Cuentanos sobre tu idea o negocio</label>
-          </div>
-          <!-- FORM END -->
-        </div>
-        <div class="modal-footer">
-          <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Salir</button>
-          <button type="button" class="btn btn-info">Enviar</button>
-        </div>
-      </div>
-    </div>
-  </div>
-  <!-- BRANDIGN -->
-  <div class="modal fade" id="modal-branding" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
-    <div class="modal-dialog">
-      <div class="modal-content">
-        <div class="modal-header">
-          <h5 class="modal-title" id="exampleModalLabel">¡Cuentanos de tu idea! ¡Queremos escucharte!</h5>
-          <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-        </div>
-        <div class="modal-body">
-          <p class="lead">¡Pongámonos en contacto!</p>
-          <!-- FORM START -->
-          <div class="form-floating mb-3">
-            <input type="name" class="form-control" id="floating-name" placeholder="full-name">
-            <label for="floating-name">Nombre Completo</label>
-          </div>
-          <div class="form-floating mb-3">
-            <input type="email" class="form-control" id="floating-email" placeholder="email">
-            <label for="floating-email">Correo Electronico</label>
-          </div>
-          <div class="form-floating mb-3">
-            <input type="phone-number" class="form-control" id="floating-email" placeholder="phone-number">
-            <label for="floating-phone-number">Numero Telefonico</label>
-          </div>
-          <div class="form-floating">
-            <textarea class="form-control" placeholder="Leave a comment here" id="floatingTextarea2"
-              style="height: 100px"></textarea>
-            <label for="floatingTextarea2">Cuentanos sobre tu idea o negocio</label>
-          </div>
-          <!-- FORM END -->
-        </div>
-        <div class="modal-footer">
-          <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Salir</button>
-          <button type="button" class="btn btn-info">Enviar</button>
-        </div>
-      </div>
-    </div>
-  </div>
-  <!-- MAS -->
-  <div class="modal fade" id="modal-mas" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
-    <div class="modal-dialog">
-      <div class="modal-content">
-        <div class="modal-header">
-          <h5 class="modal-title" id="exampleModalLabel">¡Cuentanos de tu idea! ¡Queremos escucharte!</h5>
-          <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-        </div>
-        <div class="modal-body">
-          <p class="lead">¡Pongámonos en contacto!</p>
-          <!-- FORM START -->
-          <div class="form-floating mb-3">
-            <input type="name" class="form-control" id="floating-name" placeholder="full-name">
-            <label for="floating-name">Nombre Completo</label>
-          </div>
-          <div class="form-floating mb-3">
-            <input type="email" class="form-control" id="floating-email" placeholder="email">
-            <label for="floating-email">Correo Electronico</label>
-          </div>
-          <div class="form-floating mb-3">
-            <input type="phone-number" class="form-control" id="floating-email" placeholder="phone-number">
-            <label for="floating-phone-number">Numero Telefonico</label>
-          </div>
-          <div class="form-floating">
-            <textarea class="form-control" placeholder="Leave a comment here" id="floatingTextarea2"
-              style="height: 100px"></textarea>
-            <label for="floatingTextarea2">Cuentanos sobre tu idea o negocio</label>
-          </div>
-          <!-- FORM END -->
-        </div>
-        <div class="modal-footer">
-          <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Salir</button>
-          <button type="button" class="btn btn-info">Enviar</button>
-        </div>
-      </div>
-    </div>
-  </div>
-  <!-- MODAL SECTION END -->
-  <div class="bottom-servicios"> </div>
   <!--------------------------------------------------------------------------------------------------------------------------->
 
   <!-- FOOTER SECTION START -->
@@ -346,6 +253,16 @@
   <!-- FOOTER END -->
 
   <!--------------------------------------------------------------------------------------------------------------------------->
+  <!-- <script>
+    var myModal = document.getElementById('myModal')
+    var myInput = document.getElementById('myInput')
+
+    myModal.addEventListener('shown.bs.modal', function () {
+      myInput.focus()
+    })
+  </script> -->
+  <!-- <script src="../js/jquery.js"></script> -->
+  <script src="../js/bootstrap.js"></script>
 
 </body>
 
