--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                     <li><a href="index.html" class="selected">HOME</a></li>
                     <li><a href="./pages/tools.html">Toolkit</a></li>
                     <li><a href="./pages/servicios.html">Servicios</a></li>
-                    <li><a href="./pages/portafolio.html">Portafolio</a></li>
+                    <li><a href="./pages/portafolio.html">proyecto</a></li>
                     <li><a href="./pages/contacto.html">Contacto</a></li>
                 </ul>
             </div>
@@ -45,11 +45,11 @@
 
     <nav class="bottom">
         <ul class="bottomUl">
-            <li class="SERVICIOS"><a href="./pages/servicios.html"><i class="fas fa-book"></i></a></li>
-            <li class="TOOLS"><a href="./pages/tools.html"><i class="fa-solid fa-tools"></i></a></li>
-            <li class="HOME"><a href="index.html"><i class="fas fa-home"></i></a></li>
-            <li class="PORTAFOLIO"><a href="./pages/portafolio.html"><i class="fas fa-code"></i></a></li>
-            <li class="CONTACTO"><a href="./pages/contacto.html"><i class="fas fa-message"></i></a></li>
+            <li><a href="./pages/servicios.html"><i class="fas fa-book"></i></a></li>
+            <li><a href="./pages/tools.html"><i class="fa-solid fa-tools"></i></a></li>
+            <li><a href="index.html"><i class="fas fa-home"></i></a></li>
+            <li><a href="./pages/portafolio.html"><i class="fas fa-code"></i></a></li>
+            <li><a href="./pages/contacto.html"><i class="fas fa-message"></i></a></li>
         </ul>
     </nav>
 
@@ -82,9 +82,9 @@
                     </h1> -->
 
                     <div class="typewriter">
-                        <h1>Hola<span>,</span> esto es Alma Digital<span>!</span></h1>
+                        <!-- <h1>Hola<span>,</span> esto es Alma Digital<span>!</span></h1> -->
 
-                        <p id="line-1">Soy web developer independiente <span>y algo mas</span> en Miami, FL.</p>
+                        <!-- <p id="line-1">Soy web developer independiente <span>y algo mas</span> en Miami, FL.</p> -->
                         <!-- <p id="line-2">Send me a message to discuss your project.</p> -->
 
                     </div>
@@ -147,7 +147,7 @@
 
     <!-- FOOTER END -->
 
-    <!------------------------------------------------------------------------------------------------------------------------>
+    <!--------------------------------------------------------------------------------------------------------------------------->
 
 
 </body>
