--- a/PAGES/portafolio.html
+++ b/PAGES/portafolio.html
@@ -11,7 +11,7 @@
     content="Alma Digital ofrece servicios digitales de desarrollo de sitios y aplicaciones web para emprendedores">
   <meta name="keywords" content="HTML, JS, CSS, SASS, WEB, DESARROLLO WEB, DISEÑO, UX/UI, BRANDING, SITIO WEB">
 
-  <title>INDEX</title>
+  <title>PROYECTOS</title>
 
   <!--BOOTSTRAP & CSS INCICIO----------------------------------------------------------------------------------------->
 
@@ -21,7 +21,7 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
   <link rel="stylesheet" href="../CSS/styles.css">
-
+  <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
 
   <!--BOOTSTRAP & CSS FINAL----------------------------------------------------------------------------------------->
 
@@ -39,7 +39,7 @@
           <li><a href="../index.html">HOME</a></li>
           <li><a href="tools.html">Toolkit</a></li>
           <li><a href="servicios.html">Servicios</a></li>
-          <li><a href="portafolio.html" class="selected">Portafolio</a></li>
+          <li><a href="portafolio.html" class="selected">Proyectos</a></li>
           <li><a href="contacto.html">Contacto</a></li>
         </ul>
       </div>
@@ -48,11 +48,11 @@
 
   <nav class="bottom">
     <ul class="bottomUl">
-      <li class="SERVICIOS"><a href="servicios.html"><i class="fas fa-book"></i></a></li>
-      <li class="TOOLS"><a href="tools.html"><i class="fa-solid fa-tools"></i></a></li>
-      <li class="HOME"><a href="../index.html"><i class="fas fa-home"></i></a></li>
-      <li class="PORTAFOLIO"><a href="portafolio.html"><i class="fas fa-code"></i></a></li>
-      <li class="CONTACTO"><a href="contacto.html"><i class="fas fa-message"></i></a></li>
+      <li><a href="../index.html"><i class="fas fa-home"></i></a></li>
+      <li><a href="servicios.html"><i class="fas fa-book"></i></a></li>
+      <li><a href="tools.html"><i class="fa-solid fa-tools"></i></a></li>
+      <li><a href="portafolio.html"><i class="fas fa-code"></i></a></li>
+      <li><a href="contacto.html"><i class="fas fa-message"></i></a></li>
     </ul>
   </nav>
 
@@ -62,7 +62,7 @@
 
   <!-- CAROUSEL SECTION START -->
 
-  <div class="container carusel-portafolio mt-5 mb-3">
+  <div class="container carusel-portafolio" data-aos="fade-down" data-aos-easing="linear" data-aos-duration="500">
 
     <div class="owl-carousel owl-theme">
       <!-- PROYECTO 1-->
@@ -72,18 +72,14 @@
           <div class="card-body">
             <h4 class="card-text">IN MY FEELINGS</h4>
             <p class="card-text text-secondary">Hecho con:</p>
-
             <i class="html fa-brands fa-html5"></i>
             <i class="css fa-brands fa-css3"></i>
             <i class="js fa-brands fa-js"></i>
             <i class="sass fa-brands fa-sass"></i>
-
-
             <p class="card-text mt-2">
               Una app de diario y prueba que selecciona musica en
               función de su estado de ánimo.
             </p>
-
             <button class='boton--portafolio'>Demo</button>
           </div>
         </div>
@@ -95,17 +91,13 @@
           <div class="card-body">
             <h4 class="card-text">Habit Tracker</h4>
             <p class="card-text text-secondary">Hecho con:</p>
-
             <i class="html fa-brands fa-html5"></i>
             <i class="css fa-brands fa-css3"></i>
             <i class="js fa-brands fa-js"></i>
             <i class="sass fa-brands fa-sass"></i>
-
-
             <p class="card-text mt-2"> Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsum harum nam
               asperiores.
             </p>
-
             <button class='boton--portafolio'>Demo</button>
           </div>
         </div>
@@ -117,17 +109,13 @@
           <div class="card-body">
             <h4 class="card-text">WHAT TO DO</h4>
             <p class="card-text text-secondary">Hecho con:</p>
-
             <i class="html fa-brands fa-html5"></i>
             <i class="css fa-brands fa-css3"></i>
             <i class="js fa-brands fa-js"></i>
             <i class="sass fa-brands fa-sass"></i>
-
-
             <p class="card-text mt-2"> ¿Cuál es el plan?
               Una aplicación de eventos que captura eventos de entretenimiento.
             </p>
-
             <button class='boton--portafolio'>Demo</button>
           </div>
         </div>
@@ -139,17 +127,13 @@
           <div class="card-body">
             <h4 class="card-text">Into The Void</h4>
             <p class="card-text text-secondary">Hecho con:</p>
-
             <i class="html fa-brands fa-html5"></i>
             <i class="css fa-brands fa-css3"></i>
             <i class="js fa-brands fa-js"></i>
             <i class="sass fa-brands fa-sass"></i>
-
-
             <p class="card-text mt-2"> ¡Una aplicación de minijuego javascript en la que esquivas asteroides con tu
               cohete!
             </p>
-
             <button class='boton--portafolio'>Demo</button>
           </div>
         </div>
@@ -161,12 +145,10 @@
           <div class="card-body">
             <h4 class="card-text">RIDE THE WAVE</h4>
             <p class="card-text text-secondary">Hecho con:</p>
-
             <i class="html fa-brands fa-html5"></i>
             <i class="css fa-brands fa-css3"></i>
             <i class="js fa-brands fa-js"></i>
             <i class="sass fa-brands fa-sass"></i>
-
             <p class="card-text mt-2"> ¿Cuál es tu estética?
               Una app que elije tu estilo del dia en base a un questionario.
             </p>
@@ -181,16 +163,12 @@
           <div class="card-body">
             <h4 class="card-text">EVERYDAY LIFE WITH HANNAH</h4>
             <p class="card-text text-secondary">Hecho con:</p>
-
             <i class="html fa-brands fa-html5"></i>
             <i class="css fa-brands fa-css3"></i>
             <i class="js fa-brands fa-js"></i>
             <i class="sass fa-brands fa-sass"></i>
-
-
             <p class="card-text mt-2"> Conversión de PSD, Responsive.</p>
-
-              <button class='boton--portafolio'>Demo</button>
+            <button class='boton--portafolio'>Demo</button>
           </div>
         </div>
       </div>
@@ -198,31 +176,10 @@
     </div>
   </div>
 
-
-  <!--------------------------------------------------------------------------------------------------------------------------->
-
-  <!-- NEWSLETTER START -->
-  <section class="newsletter text-light py-0 ">
-    <div class="container">
-      <div class="d-md-flex justify-content-between align-items-baseline">
-        <h3 class="col-6 mb-3 mb-md-0 d-none d-md-block fs-4">¿Quieres saber más sobre nuestros proyectos??</h3>
-
-        <div class="input-group news-input m-2">
-          <input type="text" class="form-control" placeholder="Suscríbete para nuestro newsletter">
-          <button class="btn btn-secondary  text-light btn-lg" type="button">Suscríbete!</button>
-        </div>
-      </div>
-    </div>
-
-  </section>
-  <!-- NEWSLETTER END -->
-
-
-
   <!--------------------------------------------------------------------------------------------------------------------------->
 
   <!-- FOOTER SECTION START -->
-  <footer class="footer" id="scrollspy-footer" class=" p-3 bg-dark text-white text-center position-relative">
+  <footer class="footer" class="position-relative">
     <div class="container">
       <div class="social-media">
         <i class="icon fa-brands fa-instagram"></i>
@@ -233,14 +190,14 @@
         <i class="icon fa-solid fa-at"></i>
       </div>
     </div>
-    <a href="#" class="bottom-0 end-0 p-3">
+    <!-- <a href="#" class="bottom-0 end-0 p-3"> -->
+    <a id="footer-up" href="#" class="bottom-0 end-0 p-3">
       <i class="bi bi-arrow-up-circle h1"></i>
     </a>
   </footer>
   <div class="copyright">
     Copyright &copy; 2022 - Diseño Web Realizado por <span>Aminta S. Largaespada</span>
   </div>
-
   <!-- FOOTER END -->
 
   <!--------------------------------------------------------------------------------------------------------------------------->
@@ -248,6 +205,10 @@
   <!-- BOOTSTRAP JS START -->
   <script src="../js/jquery.js"></script>
   <script src="../js/owl_carousel.js"></script>
+  <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+  <script>
+    AOS.init();
+  </script>
   <!-- BOOTSTRAP JS END -->
   <!--------------------------------------------------------------------------------------------------------------------------->
 
