--- a/PAGES/servicios.html
+++ b/PAGES/servicios.html
@@ -11,7 +11,7 @@
     content="Alma Digital ofrece servicios digitales de desarrollo de sitios y aplicaciones web para emprendedores">
   <meta name="keywords" content="HTML, JS, CSS, SASS, WEB, DESARROLLO WEB, DISEÑO, UX/UI, BRANDING, SITIO WEB">
 
-  <title>INDEX</title>
+  <title>SERVICIOS</title>
 
   <!--BOOTSTRAP & CSS INCICIO----------------------------------------------------------------------------------------->
 
@@ -20,6 +20,8 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
   <link rel="stylesheet" href="../css/styles.css">
+  <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
+
 
 
   <!--BOOTSTRAP & CSS FINAL----------------------------------------------------------------------------------------->
@@ -38,7 +40,7 @@
           <li><a href="../index.html">HOME</a></li>
           <li><a href="tools.html">Toolkit</a></li>
           <li><a href="servicios.html" class="selected">Servicios</a></li>
-          <li><a href="portafolio.html">Portafolio</a></li>
+          <li><a href="portafolio.html">Proyectos</a></li>
           <li><a href="contacto.html">Contacto</a></li>
         </ul>
       </div>
@@ -47,35 +49,17 @@
 
   <nav class="bottom">
     <ul class="bottomUl">
-      <li class="SERVICIOS"><a href="servicios.html"><i class="fas fa-book"></i></a></li>
-      <li class="TOOLS"><a href="tools.html"><i class="fa-solid fa-tools"></i></a></li>
-      <li class="HOME"><a href="../index.html"><i class="fas fa-home"></i></a></li>
-      <li class="PORTAFOLIO"><a href="portafolio.html"><i class="fas fa-code"></i></a></li>
-      <li class="CONTACTO"><a href="contacto.html"><i class="fas fa-message"></i></a></li>
+      <li><a href="../index.html"><i class="fas fa-home"></i></a></li>
+      <li><a href="servicios.html"><i class="fas fa-book"></i></a></li>
+      <li><a href="tools.html"><i class="fa-solid fa-tools"></i></a></li>
+      <li><a href="portafolio.html"><i class="fas fa-code"></i></a></li>
+      <li><a href="contacto.html"><i class="fas fa-message"></i></a></li>
     </ul>
   </nav>
 
 
-  <!-- NAV BAR FINAL------------------------------------------------------------------------------------------------------------------------->
 
-  <!-- BANNER STAR -->
-  <!-- <section id="scrollspy-banner" class="bg-secondary text-light p-5 p-lg-0 pt-lg-5 text-center text-sm-start">
-    <div class="container">
-      <div class="d-sm-flex align-items-center justify-content-between">
-        <img class="img-fluid w-50 d-none d-sm-block px-4 " src="../IMG/PROJECT 1/4.svg" alt="">
-        <div>
-          <h1>Sneak peak, <span class="text-info">BOOTSTRAP!</span> </h1>
-          <p class="lead my-4 ">Lorem ipsum dolor sit amet consectetur adipisicing elit. Eveniet minima
-            tempora expedita? Ullam
-            sed totam voluptates ea adipisci distinctio laborum?</p>
-          <button class="btn btn-info btn-lg" type="button" data-bs-toggle="modal" data-bs-target="#modal">Start
-            learning
-            today</button>
-        </div>
-      </div>
-    </div>
-  </section> -->
-  <!-- BANNER END -->
+  <!-- NAV BAR FINAL------------------------------------------------------------------------------------------------------------------------->
 
 
   <!-- MODAL SECTION START -->
@@ -116,13 +100,13 @@
   <!-- MODAL SECTION END -->
 
 
-  <div class="banner-servicios p-5 pb-0">
+  <div class="banner-servicios p-5 pb-5" data-aos="fade-down" data-aos-easing="linear" data-aos-duration="500">
     <div class="container">
       <div class="row align-items-center justify-content-between">
 
 
         <div class="col-md order-1 order-md-2">
-          <img src="../assets/A.jpg" class="img-fluid" alt="">
+          <img src="../assets/servicios.jpg" class="img-fluid" alt="">
         </div>
 
 
@@ -137,46 +121,9 @@
     </div>
   </div>
 
-  <!-- MODAL BANNER START -->
-  <!-- <div class="modal fade" id="modal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
-    <div class="modal-dialog">
-      <div class="modal-content">
-        <div class="modal-header">
-          <h5 class="modal-title" id="exampleModalLabel">¡Cuentanos de tu idea! ¡Queremos escucharte!</h5>
-          <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-        </div>
-        <div class="modal-body">
-          <p class="lead">¡Pongámonos en contacto!</p>
-          <div class="form-floating mb-3">
-            <input type="name" class="form-control" id="floating-name" placeholder="full-name">
-            <label for="floating-name">Nombre Completo</label>
-          </div>
-          <div class="form-floating mb-3">
-            <input type="email" class="form-control" id="floating-email" placeholder="email">
-            <label for="floating-email">Correo Electronico</label>
-          </div>
-          <div class="form-floating mb-3">
-            <input type="phone-number" class="form-control" id="floating-email" placeholder="phone-number">
-            <label for="floating-phone-number">Numero Telefonico</label>
-          </div>
-          <div class="form-floating">
-            <textarea class="form-control" placeholder="Leave a comment here" id="floatingTextarea2"
-              style="height: 100px"></textarea>
-            <label for="floatingTextarea2">Cuentanos sobre tu idea o negocio</label>
-          </div>
-        </div>
-        <div class="modal-footer">
-          <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Salir</button>
-          <button type="button" class="btn btn-info">Enviar</button>
-        </div>
-      </div>
-    </div>
-  </div> -->
-  <!-- MODAL BANNER END -->
-
   <!--SERVICIOS CARDS------------------------------------------------------------------------------------------------------------------------->
 
-  <div class="wrapper-grid">
+  <div class="wrapper-grid" data-aos="fade-down" data-aos-easing="linear" data-aos-duration="500">
 
     <div class="container-servicios ">
       <!-- <div class='banner-img'></div> -->
@@ -226,8 +173,6 @@
     </div>
   </div>
 
-  <!--MODAL PARA LOS SERVICIOS------------------------------------------------------------------------------------------------------------------------->
-
   <!--------------------------------------------------------------------------------------------------------------------------->
 
   <!-- FOOTER SECTION START -->
@@ -253,16 +198,11 @@
   <!-- FOOTER END -->
 
   <!--------------------------------------------------------------------------------------------------------------------------->
-  <!-- <script>
-    var myModal = document.getElementById('myModal')
-    var myInput = document.getElementById('myInput')
-
-    myModal.addEventListener('shown.bs.modal', function () {
-      myInput.focus()
-    })
-  </script> -->
-  <!-- <script src="../js/jquery.js"></script> -->
   <script src="../js/bootstrap.js"></script>
+  <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+  <script>
+    AOS.init();
+  </script>
 
 </body>
 
