--- a/PAGES/tools.html
+++ b/PAGES/tools.html
@@ -11,7 +11,7 @@
     content="Alma Digital ofrece servicios digitales de desarrollo de sitios y aplicaciones web para emprendedores">
   <meta name="keywords" content="HTML, JS, CSS, SASS, WEB, DESARROLLO WEB, DISEÑO, UX/UI, BRANDING, SITIO WEB">
 
-  <title>INDEX</title>
+  <title>TOOLKIT</title>
 
   <!--BOOTSTRAP & CSS INCICIO----------------------------------------------------------------------------------------->
 
@@ -20,6 +20,7 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
   <link rel="stylesheet" href="../css/styles.css">
+  <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
 
   <!--BOOTSTRAP & CSS FINAL----------------------------------------------------------------------------------------->
 
@@ -38,7 +39,7 @@
           <li><a href="../index.html">HOME</a></li>
           <li><a href="tools.html" class="selected">Toolkit</a></li>
           <li><a href="servicios.html">Servicios</a></li>
-          <li><a href="portafolio.html">Portafolio</a></li>
+          <li><a href="portafolio.html">Proyectos</a></li>
           <li><a href="contacto.html">Contacto</a></li>
         </ul>
       </div>
@@ -47,24 +48,69 @@
 
   <nav class="bottom">
     <ul class="bottomUl">
-      <li class="SERVICIOS"><a href="servicios.html"><i class="fas fa-book"></i></a></li>
-      <li class="TOOLS"><a href="tools.html"><i class="fa-solid fa-tools"></i></a></li>
-      <li class="HOME"><a href="../index.html"><i class="fas fa-home"></i></a></li>
-      <li class="PORTAFOLIO"><a href="portafolio.html"><i class="fas fa-code"></i></a></li>
-      <li class="CONTACTO"><a href="contacto.html"><i class="fas fa-message"></i></a></li>
+      <li><a href="servicios.html"><i class="fas fa-book"></i></a></li>
+      <li><a href="../index.html"><i class="fas fa-home"></i></a></li>
+      <li><a href="tools.html"><i class="fa-solid fa-tools"></i></a></li>
+      <li><a href="portafolio.html"><i class="fas fa-code"></i></a></li>
+      <li><a href="contacto.html"><i class="fas fa-message"></i></a></li>
     </ul>
   </nav>
 
 
   <!-- NAV BAR FINAL------------------------------------------------------------------------------------------------------------------------->
+  <!-- MODAL SECTION START -->
+  <div class="modal fade" id="modal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+    <div class="modal-dialog">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h5 class="modal-title" id="exampleModalLabel">Cuentanos de tu idea. ¡Queremos escucharte!</h5>
+          <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+        </div>
+        <div class="modal-body">
+          <!-- <p class="lead">¡Pongámonos en contacto!</p> -->
+          <div class="form-floating mb-3">
+            <input type="name" class="form-control" id="floating-name" placeholder="full-name">
+            <label for="floating-name">Nombre Completo</label>
+          </div>
+          <div class="form-floating mb-3">
+            <input type="email" class="form-control" id="floating-email" placeholder="email">
+            <label for="floating-email">Correo Electronico</label>
+          </div>
+          <div class="form-floating mb-3">
+            <input type="phone-number" class="form-control" id="floating-email" placeholder="phone-number">
+            <label for="floating-phone-number">Numero Telefonico</label>
+          </div>
+          <div class="form-floating">
+            <textarea class="form-control" placeholder="Leave a comment here" id="floatingTextarea2"
+              style="height: 100px"></textarea>
+            <label for="floatingTextarea2">Cuentanos sobre tu idea o negocio</label>
+          </div>
+        </div>
+        <div class="modal-footer">
+          <button type="button" class="btn botoncito1" data-bs-dismiss="modal">Salir</button>
+          <button type="button" class="btn botoncito2">Enviar</button>
+        </div>
+      </div>
+    </div>
+  </div>
+  <!-- MODAL SECTION END -->
 
 
-
-  <div class="skills">
-    <div class="container card-tool">
-      <div class="text">
-        <h2>MIS <span>HERRAMIENTAS</span></h2>
-        <p>Estas son algunas de las habilidades que poseo y herramientas tecnologicas que conozco y voy mejorando poco a poco en el uso de estas.</p>
+  <div class="skills" data-aos="fade-down" data-aos-easing="linear" data-aos-duration="500">
+    <div class="container">
+      <div class="container">
+        <div class="row align-items-center justify-content-between">
+          <div class="col-md text-center">
+            <h2>MIS <span>HERRAMIENTAS</span></h2>
+            <p>Estas son algunas de las habilidades que poseo y herramientas tecnologicas que conozco y voy mejorando
+              poco a
+              poco en el uso de estas.</p>
+            <button class="boton" type="button" data-bs-toggle="modal" data-bs-target="#modal">¡Hablemos!</button>
+          </div>
+          <div class="col-md pb-5">
+            <img src="../assets/tools1.jpg" class="img-fluid" alt="">
+          </div>
+        </div>
       </div>
 
       <div class="skill-card">
@@ -98,8 +144,6 @@
           <!-- <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Et aliquid, ipsam.</p> -->
         </div>
 
-        <!--  -->
-
         <div class="card">
           <i class="fa-brands fa-html5"></i>
           <h4>HTML</h4>
@@ -128,82 +172,9 @@
     </div>
   </div>
 
- 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-  <!------------------------------------------------------------------------------------------------------------------------------------->
-
-  <!-- <div class="container">
-    <div class="jumbotron bg-light">
-      <h1 class="display-3 text-center">Herramientas con las que trabajo</h1>
-      <p class="text-muted">Soy una desarrolladora y diseñadora multidisciplinaria apasionado por crear experiencias de
-        usuario atractivas y entretenidas. Estoy emocionado de dar el salto y continuar perfeccionando mis habilidades
-        con la compañía
-        adecuada.</p>
-    </div>
-
-
-    <div class="row tools">
-      <div class="col-lg-6">
-        <img src="../assets/c.jpg" alt="" class="img-thumbnail">
-      </div>
-
-      <div class="col-lg-6">
-        <h2 class="display-5 my-4">Caja de herramientas</h2>
-
-        <div class="mb 3">
-          <label>HTML & CSS</label>
-          <div class="progress">
-            <div class="progress-bar bg-info" style="width: 100%;" role="progressbar" aria-valuenow="100"
-              aria-valuemin="0" aria-valuemax="100">100%</div>
-          </div>
-        </div>
-
-        <div class="mb 3">
-          <label>Javascript</label>
-          <div class="progress">
-            <div class="progress-bar bg-info" style="width: 90%;" role="progressbar" aria-valuenow="90"
-              aria-valuemin="0" aria-valuemax="100">90%</div>
-          </div>
-        </div>
-
-        <div class="mb 3">
-          <label>Bootstrap</label>
-          <div class="progress">
-            <div class="progress-bar bg-info" style="width: 70%;" role="progressbar" aria-valuenow="70"
-              aria-valuemin="0" aria-valuemax="100">70%</div>
-          </div>
-        </div>
-
-        <div class="mb 3">
-          <label>Sass</label>
-          <div class="progress">
-            <div class="progress-bar bg-info" style="width: 80%;" role="progressbar" aria-valuenow="80"
-              aria-valuemin="0" aria-valuemax="100">80%</div>
-          </div>
-        </div>
-      </div>
-    </div>
-  </div> -->
-
   <!--------------------------------------------------------------------------------------------------------------------------->
-
   <!-- FOOTER SECTION START -->
-  <footer class="footer" id="scrollspy-footer" class=" p-3 bg-dark text-white text-center position-relative">
+  <footer class="footer" class="position-relative">
     <div class="container">
       <div class="social-media">
         <i class="icon fa-brands fa-instagram"></i>
@@ -214,19 +185,22 @@
         <i class="icon fa-solid fa-at"></i>
       </div>
     </div>
-    <a href="#" class="bottom-0 end-0 p-3">
+    <!-- <a href="#" class="bottom-0 end-0 p-3"> -->
+    <a id="footer-up" href="#" class="bottom-0 end-0 p-3">
       <i class="bi bi-arrow-up-circle h1"></i>
     </a>
   </footer>
   <div class="copyright">
     Copyright &copy; 2022 - Diseño Web Realizado por <span>Aminta S. Largaespada</span>
   </div>
-
   <!-- FOOTER END -->
 
   <!--------------------------------------------------------------------------------------------------------------------------->
-
-
+  <script src="../js/bootstrap.js"></script>
+  <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+  <script>
+    AOS.init();
+  </script>
 </body>
 
 </html>
