--- a/index.html
+++ b/index.html
@@ -19,14 +19,13 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.2/css/all.min.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.9.1/font/bootstrap-icons.css">
     <link rel="stylesheet" href="css/styles.css">
-
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <!--BOOTSTRAP & CSS FINAL----------------------------------------------------------------------------------------->
 
 </head>
 
 <body>
     <!--NAV BAR INICIO------------------------------------------------------------------------------------------------------------------------->
-
 
     <nav class="top">
         <div class="header">
@@ -36,7 +35,7 @@
                     <li><a href="index.html" class="selected">HOME</a></li>
                     <li><a href="./pages/tools.html">Toolkit</a></li>
                     <li><a href="./pages/servicios.html">Servicios</a></li>
-                    <li><a href="./pages/portafolio.html">proyecto</a></li>
+                    <li><a href="./pages/portafolio.html">proyectos</a></li>
                     <li><a href="./pages/contacto.html">Contacto</a></li>
                 </ul>
             </div>
@@ -45,87 +44,105 @@
 
     <nav class="bottom">
         <ul class="bottomUl">
+            <li><a href="index.html"><i class="fas fa-home"></i></a></li>
             <li><a href="./pages/servicios.html"><i class="fas fa-book"></i></a></li>
             <li><a href="./pages/tools.html"><i class="fa-solid fa-tools"></i></a></li>
-            <li><a href="index.html"><i class="fas fa-home"></i></a></li>
             <li><a href="./pages/portafolio.html"><i class="fas fa-code"></i></a></li>
             <li><a href="./pages/contacto.html"><i class="fas fa-message"></i></a></li>
         </ul>
     </nav>
 
-
     <!-- NAV BAR FINAL------------------------------------------------------------------------------------------------------------------------->
 
-
-
-    <!-- LEARN START -->
-    <div id="scrollspy-learn" class="p-5 pb-0">
-        <div class="container-home">
+    <div class=" m-3" data-aos="fade-down" data-aos-easing="linear" data-aos-duration="500">
+        <div class="container container-home">
             <div class="row align-items-center justify-content-between">
                 <div class="col-md order-2 order-md-1">
-                    <img src="./assets/B.webp" class="img-fluid" alt="">
+                    <img src="./assets/home1.jpg" class="img-fluid" alt="">
                 </div>
-                <div class="typewriter col-md align-items-center p-5 order-1 order-md-2">
-                    <!-- <h1>Hola<span>,</span> esto es Alma Digital<span>!</span></h1> -->
-                    <!-- <h4>DESARROLLO WEB</h4> -->
-                    <!--  -->
-
-
-                    <!-- <h1 class="portafolio">
-                        <span class="animacion">always be</span>
-                        <div class="message">
-                            <div class="word1">close</div>
-                            <div class="word2">code</div>
-                            <div class="word3">creating</div>
-                            <div class="word3">creating</div>
+                <div class="col-md order-1 order-md-2 text-center">
+                    <div>
+                        <div class="text-top">
+                            <h1>Hola <span>,</span> esto es Alma Digital<span>!</span></h1>
+                            <h4>DESARROLLO WEB</h4>
                         </div>
-                    </h1> -->
-
-                    <div class="typewriter">
-                        <!-- <h1>Hola<span>,</span> esto es Alma Digital<span>!</span></h1> -->
-
-                        <!-- <p id="line-1">Soy web developer independiente <span>y algo mas</span> en Miami, FL.</p> -->
-                        <!-- <p id="line-2">Send me a message to discuss your project.</p> -->
-
+                        <p>
+                            ALMA Digital es un servicio de creacion de paginas o aplicaciones web para PYMES.
+                            Soy una soñadora que en todo lo que hace le pone un pedacito de su alma para que cada
+                            proyecto
+                            tenga vida propia.
+                            Todos somos diferentes y soñamos diferentes y por eso me apasiona escuchar las historias que
+                            hay
+                            detras de cada emprendimiento.
+                            Quiero escucharte, conocerte y ayudarte a desarrollar tus sueños para que estos se
+                            conviertan en
+                            tu REALIDAD!</p>
+                        <button class="boton" type="button" data-bs-toggle="modal"
+                            data-bs-target="#modal">¡Contactanos!</button>
                     </div>
-
-
-                    <!--  -->
-                    <p>
-                        ALMA Digital es un servicio de creacion de paginas o aplicaciones web para PYMES.
-                        Soy una soñadora que en todo lo que hace le pone un pedacito de su alma para que cada proyecto
-                        tenga vida propia.
-                        Todos somos diferentes y soñamos diferentes y por eso me apasiona escuchar las historias que hay
-                        detras de cada emprendimiento.
-                        Quiero escucharte, conocerte y ayudarte a desarrollar tus sueños para que estos se conviertan en
-                        tu REALIDAD!</p>
-                    <button class="boton" href="./pages/contacto.html">CONTACTAME</button>
                 </div>
             </div>
         </div>
     </div>
 
-    <div class="p-5 pt-0">
+    <div class=" m-3" data-aos="fade-down" data-aos-easing="linear" data-aos-duration="500">
         <div class="container">
             <div class="row align-items-center justify-content-between">
-                <div class="col-md text-center p-5 ">
+                <div class="col-md text-center">
                     <h2>Quieres saber mas de mi?</h2>
-                    <p>Mucho gusto, mi nombre es Aminta y soy desarrolladora web y me entusiasman los desafios nuevos
+                    <p>Mucho gusto, mi nombre es Aminta y soy desarrolladora web y me entusiasman los desafios
+                        nuevos
                         que me retan a crecer y aprender! Si te gustaria saber mas acerca de mi experiencia puedes
                         descargar mi CV o ver mi portafolio! Espero con ansias recibir un mensaje tuyo!</p>
                     <button class="boton">Curriculum <i class="fa-solid fa-download"></i></button>
                 </div>
-                <div class="col-md ">
-                    <img src="./assets/A.jpg" class="img-fluid" alt="">
+                <div class="col-md pb-5">
+                    <img src="./assets/home2.jpg" class="img-fluid" alt="">
                 </div>
             </div>
         </div>
     </div>
-    <!-- LEARN END -->
+
+    <!-- MODAL SECTION START -->
+    <div class="modal fade" id="modal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title" id="exampleModalLabel">Cuentanos de tu idea. ¡Queremos escucharte!</h5>
+                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                </div>
+                <div class="modal-body">
+                    <!-- <p class="lead">¡Pongámonos en contacto!</p> -->
+                    <div class="form-floating mb-3">
+                        <input type="name" class="form-control" id="floating-name" placeholder="full-name">
+                        <label for="floating-name">Nombre Completo</label>
+                    </div>
+                    <div class="form-floating mb-3">
+                        <input type="email" class="form-control" id="floating-email" placeholder="email">
+                        <label for="floating-email">Correo Electronico</label>
+                    </div>
+                    <div class="form-floating mb-3">
+                        <input type="phone-number" class="form-control" id="floating-email" placeholder="phone-number">
+                        <label for="floating-phone-number">Numero Telefonico</label>
+                    </div>
+                    <div class="form-floating">
+                        <textarea class="form-control" placeholder="Leave a comment here" id="floatingTextarea2"
+                            style="height: 100px"></textarea>
+                        <label for="floatingTextarea2">Cuentanos sobre tu idea o negocio</label>
+                    </div>
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn botoncito1" data-bs-dismiss="modal">Salir</button>
+                    <button type="button" class="btn botoncito2">Enviar</button>
+                </div>
+            </div>
+        </div>
+    </div>
+    <!-- MODAL SECTION END -->
     <!--------------------------------------------------------------------------------------------------------------------------->
 
     <!-- FOOTER SECTION START -->
-    <footer class="footer" id="scrollspy-footer" class=" p-3 bg-dark text-white text-center position-relative">
+    <footer class="footer" class="position-relative">
         <div class="container">
             <div class="social-media">
                 <i class="icon fa-brands fa-instagram"></i>
@@ -136,10 +153,10 @@
                 <i class="icon fa-solid fa-at"></i>
             </div>
         </div>
-        <a href="#" class="bottom-0 end-0 p-3">
-            <a href="#" class="bottom-0 end-0 p-3">
-                <i class="bi bi-arrow-up-circle h1"></i>
-            </a>
+        <!-- <a href="#" class="bottom-0 end-0 p-3"> -->
+        <a id="footer-up" href="#" class="bottom-0 end-0 p-3">
+            <i class="bi bi-arrow-up-circle h1"></i>
+        </a>
     </footer>
     <div class="copyright">
         Copyright &copy; 2022 - Diseño Web Realizado por <span>Aminta S. Largaespada</span>
@@ -148,6 +165,11 @@
     <!-- FOOTER END -->
 
     <!--------------------------------------------------------------------------------------------------------------------------->
+    <script src="../js/bootstrap.js"></script>
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+    <script>
+        AOS.init();
+    </script>
 
 
 </body>
